tests/mytests/error/symbol_error.vsl
INT test, test
test := 3
